tests/golden/errors/bytes_decode_unknown_encoding.py
b"a".decode("latin-1")
